# litellm-mcp

./: claude_desktop_config.json  pyproject.toml  readme  server.py
