[project]
name = "litellm-mcp"
version = "0.1.0"
description = "MCP server for managing a self-hosted LiteLLM proxy"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "chromadb>=0.6.0",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
litellm-mcp = "litellm_mcp.server:main"
index-docs = "litellm_mcp.indexer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/litellm_mcp"]
